# RAG-PRACTISE-DOCUMANTATIONS

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
document/: 01.ipynb  02.ipynb  03.ipynb
src/: data_loader.py  search.py  vectorstore.py
