[project]
name = "mcp"
version = "0.1.0"
description = "RAG practice and documentation workflows using LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
]
